k8s-example/router/service.yml
# Router service - this is what clients connect to
apiVersion: v1
kind: Service
metadata:
  name: rkllama-router
  labels:
    app: rkllama-router
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rkllama-router
